<resources>
    <string name="app_name">Sale</string>
    <string name="hint1">name</string>
    <string name="nameCus">Name Customer </string>
    <string name="labelNamaBarang">Nama Barang </string>
    <string name="labelJumlahBarang">Jumlah Barang </string>
    <string name="labelHarga">Harga </string>
    <string name="tambah">Tambah</string>
    <string name="edit">Edit</string>
    <string name="item">Jumlah Item</string>
    <string name="totalHarga">Total Harga</string>
    <string name="titikDua"> : </string>
    <string name="bayar">Uang Bayar</string>
    <string name="lblBayar">Bayar</string>
    <string name="hpsData">Hapus Data</string>
    <string name="hps">Hapus</string>
    <string name="keluar">Keluar</string>
    <string name="nama">Nama</string>
    <string name="noHp">Nomor HP</string>
    <string name="kontakApp">Kontak App</string>
    <string name="prompt_hapus">Apakah anda yakin menghapus data ini?</string>
    <string name="cariKntk">Cari Kontak</string>
    <string name="tlpnKntk">Telepon</string>
    <string name="gpsApp">GPS APP</string>
    <string name="ListCountry">List Country App</string>
    <string name="longitude">Longitut</string>
    <string name="latitude">Latitut</string>
    <string name="stop_update">Stop Update</string>
    <string name="lat">lat</string>
    <string name="long0">long</string>
    <string name="update">update</string>
    <string name="start_update">Start Update</string>
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="terrain">Terrain</string>
    <string name="satelite">Satelite</string>
    <string name="none">None</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>